--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          git clone https://github.com/inaryart/GitSyning.git
+          cd GitSyning
+          python Syning.py
