--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,14 +24,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      
+      - uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
+        with:
+          SSHKEY: ${{ secrets.PRIVATE_SSH_CMP }}
+      - run: ssh -T git@github.com || true
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          git clone https://github.com/inaryart/GitSyning.git
+          git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
           python Syning.py
