--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,11 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
-      - uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
         with:
-          SSHKEY: ${{ secrets.PRIVATE_SSH_CMP }}
-      - run: ssh -T git@github.com || true
+          repository: inaryart/GitSyning
+          token: ${{ secrets.ACCESS_TOKEN }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
