--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,14 +24,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: actions/checkout@v2
-        with:
-          repository: inaryart/GitSyning
-          token: ${{ secrets.ACCESS_TOKEN }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          ssh-add <(echo "$PRIVATE_SSH_CMP")
           ls
+          git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
           python Syning.py
