--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          ssh-add <(echo "$PRIVATE_SSH_CMP")
+          eval `ssh-agent -s`
+          ssh-add - <<< '${{ secrets.PRIVATE_SSH_CMP }}'
+          # ssh-add <(echo "$PRIVATE_SSH_CMP")
           ls
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
