--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Run GitSyning
         run: |
           eval `ssh-agent -s`
-          ssh-add <(echo "$PRIVATE_SSH_CMP")
+          # ssh-add <(echo "$PRIVATE_SSH_CMP")
+          ssh-add "$PRIVATE_SSH_CMP"
           # ssh-add <(echo "$PRIVATE_SSH_CMP")
           ls
           git clone git@github.com:inaryart/GitSyning.git
