--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,10 +28,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run GitSyning
         run: |
-          # eval `ssh-agent -s`
-          # ssh-add <(echo "$PRIVATE_SSH_CMP")
-          ssh-add "$PRIVATE_SSH_CMP"
-          # ssh-add <(echo "$PRIVATE_SSH_CMP")
+          echo '${{ secrets.PRIVATE_SSH_CMP }}' > my_ssh.key
+          eval `ssh-agent -s`
+          ssh-add ./my_ssh.key
           ls
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
