--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run GitSyning
         run: |
-          echo '${{ secrets.PRIVATE_SSH_CMP }}' > my_ssh.key
+          echo '${{ secrets.PRIVATE_SSH_CMP }}' >> my_ssh.key
+          cat ./my_ssh.key
           ssh-add ./my_ssh.key
           ls
           git clone git@github.com:inaryart/GitSyning.git
