--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,6 +28,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run GitSyning
         run: |
+          Get-Service ssh-agent
+          Set-Service -StartupType Manual
           Start-Service ssh-agent
           Set-Service ssh-agent -StartupType Automatic
           echo '${{ secrets.PRIVATE_SSH_CMP }}' >> ./my_ssh.key
