--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,9 +31,11 @@ jobs:
           Get-Service ssh-agent | Select StartType
           Set-Service ssh-agent -StartupType Manual
           Start-Service ssh-agent
-          echo '${{ secrets.PRIVATE_SSH_CMP }}' >> ./my_ssh.key
-          cat ./my_ssh.key
-          ssh-add ./my_ssh.key
+          ssh-agent eval$(ssh-agent -s)
+          #echo '${{ secrets.PRIVATE_SSH_CMP }}' >> ./my_ssh.key
+          #cat ./my_ssh.key
+          #ssh-add ./my_ssh.key
+          ssh-add '${{ secrets.PRIVATE_SSH_CMP }}'
           ls
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
