--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,10 +31,10 @@ jobs:
           Get-Service ssh-agent | Select StartType
           Set-Service ssh-agent -StartupType Manual
           Start-Service ssh-agent
-          ssh-agent eval$(ssh-agent -s)
           echo '${{ secrets.PRIVATE_SSH_CMP }}' >> ./my_ssh.key
-          cat ./my_ssh.key | ssh-add -k
-          ls
+          icacls ./my_ssh.key /setowner $env:UserName
+          icacls ./my_ssh.key /inheritancelevel:r
+          ssh-add ./my_ssh.key
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
           python Syning.py
