--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,8 @@ jobs:
           Start-Service ssh-agent
           echo '${{ secrets.PRIVATE_SSH_CMP }}' >> ./my_ssh.key
           icacls ./my_ssh.key
-          icacls ./my_ssh.key /remove:g  BUILTIN\Administrators,NT AUTHORITY\SYSTEM
+          icacls ./my_ssh.key /remove:g BUILTIN\Administrators
+          icacls ./my_ssh.key /remove:g NT AUTHORITY\SYSTEM
           icacls ./my_ssh.key
           icacls ./my_ssh.key /setowner $env:UserName
           icacls ./my_ssh.key /inheritancelevel:r
