--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,8 +37,7 @@ jobs:
           icacls ./my_ssh.key /remove:g "BUILTIN\Administrators"
           icacls ./my_ssh.key /remove:g "NT AUTHORITY\SYSTEM"
           icacls ./my_ssh.key
-          icacls ./my_ssh.key /setowner $env:UserName
-          icacls ./my_ssh.key /inheritancelevel:r
+          icacls ./my_ssh.key /setowner BUILTIN\Users
           ssh-add ./my_ssh.key
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
