--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
           echo '${{ secrets.PRIVATE_SSH_CMP }}' >> ./my_ssh.key
           icacls ./my_ssh.key
           icacls ./my_ssh.key /inheritancelevel:r
-          icacls ./my_ssh.key /grant:r "BUILTIN\Users:R"
+          icacls ./my_ssh.key /grant:r "BUILTIN\Administrators:R"
           icacls ./my_ssh.key
           ssh-add ./my_ssh.key
           git clone git@github.com:inaryart/GitSyning.git
