--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,8 @@ jobs:
           Get-Service ssh-agent | Select StartType
           Set-Service ssh-agent -StartupType Manual
           Start-Service ssh-agent
-          echo $secrets.PRIVATE_SSH_CMP >> ./my_ssh.key
+          echo {$secrets.PRIVATE_SSH_CMP} >> ./my_ssh.key
+          cat ./my_ssh.key
           icacls ./my_ssh.key
           icacls ./my_ssh.key /inheritancelevel:r
           icacls ./my_ssh.key /grant:r "BUILTIN\Administrators:R"
