--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,17 +27,15 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run GitSyning
+        env:
+          ENV_PRIVATE_SSH_CMP: ${{ secrets.PRIVATE_SSH_CMP }}
         run: |
           Get-Service ssh-agent | Select StartType
           Set-Service ssh-agent -StartupType Manual
           Start-Service ssh-agent
-          echo {$secrets.PRIVATE_SSH_CMP}
-          echo   $Env:windir
-          echo {{$secrets.PRIVATE_SSH_CMP}}
-          echo   $Env:windir
-          echo {$secrets.PRIVATE_SSH_CMP}
-          echo   $Env:windir
-          echo {$secrets.PRIVATE_SSH_CMP} >> ./my_ssh.key
+          echo $ENV_PRIVATE_SSH_CMP
+          echo $Env:windir
+          echo $ENV_PRIVATE_SSH_CMP >> ./my_ssh.key
           cat ./my_ssh.key
           icacls ./my_ssh.key
           icacls ./my_ssh.key /inheritancelevel:r
