--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,9 +33,10 @@ jobs:
           Get-Service ssh-agent | Select StartType
           Set-Service ssh-agent -StartupType Manual
           Start-Service ssh-agent
+          echo $Env:windir
           echo $ENV_PRIVATE_SSH_CMP
           echo $Env:windir
-          echo $ENV_PRIVATE_SSH_CMP >> ./my_ssh.key
+          echo $ENV_PRIVATE_SSH_CMP > ./my_ssh.key
           cat ./my_ssh.key
           icacls ./my_ssh.key
           icacls ./my_ssh.key /inheritancelevel:r
