--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run GitSyning
         env:
-          ENV_PRIVATE_SSH_CMP: ${{ secrets.PRIVATE_SSH_CMP }}
+          ENV_PRIVATE_SSH_CMP: '${{ secrets.PRIVATE_SSH_CMP }}'
         run: |
           Get-Service ssh-agent | Select StartType
           Set-Service ssh-agent -StartupType Manual
@@ -37,6 +37,8 @@ jobs:
           echo $ENV_PRIVATE_SSH_CMP
           echo $Env:windir
           echo $ENV_PRIVATE_SSH_CMP > ./my_ssh.key
+          echo $Env:windir > ./my_ssh.key2
+          cat ./my_ssh.key2
           cat ./my_ssh.key
           icacls ./my_ssh.key
           icacls ./my_ssh.key /inheritancelevel:r
