--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,7 +41,7 @@ jobs:
           icacls ./my_ssh.key
           ssh-add ./my_ssh.key
           mkdir -p ~/.ssh
-          ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+          ssh-keyscan -t ecdsa github.com >> ~/.ssh/known_hosts
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
           python Syning.py
