--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,6 +42,7 @@ jobs:
           ssh-add ./my_ssh.key
           mkdir -p ~/.ssh
           ssh-keyscan -t rsa,dsa,ecdsa,ed25519 github.com >> ~/.ssh/known_hosts
+          cat ~/.ssh/known_hosts
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
           python Syning.py
