--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,6 +43,8 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -t rsa,dsa,ecdsa,ed25519 github.com >> ~/.ssh/known_hosts
           cat ~/.ssh/known_hosts
+          ssh-keyscan -H github.com > ~/.ssh/known_hosts
+          ssh-keygen -f ~/.ssh/known_hosts -H -F github.com
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
           python Syning.py
