--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,6 +42,8 @@ jobs:
           ssh-add ./my_ssh.key
           mkdir -p ~/.ssh
           ssh-keyscan -t rsa,dsa,ecdsa,ed25519 github.com >> ~/.ssh/known_hosts
+          icacls ~/.ssh/known_hosts /inheritancelevel:r
+          icacls ~/.ssh/known_hosts /grant:r "BUILTIN\Administrators:R"
           cat ~/.ssh/known_hosts
           ssh-keyscan -H github.com > ~/.ssh/known_hosts
           ssh-keygen -f ~/.ssh/known_hosts -H -F github.com
