--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,6 +47,7 @@ jobs:
           cat ~/.ssh/known_hosts
           ssh-keyscan -H github.com > ~/.ssh/known_hosts
           ssh-keygen -f ~/.ssh/known_hosts -H -F github.com
+          ssh -vT git@github.com
           git clone git@github.com:inaryart/GitSyning.git
           cd GitSyning
           python Syning.py
